tests/ui/mixed_indent_across_lines.rs
use inline_text::dedent;


fn main() {
    let _ = dedent!("  line\n\t\tline\n");
}
